# control-tower

./: .acrignore  .env.example  .gitignore  .secrets.baseline  .spectral.yaml  .trivyignore  AGENTS.md  AGENT_ONBOARDING.md  ARCHITECTURE.md  AZURE_DEVOPS_DEPLOYMENT_GUIDE.md  CHANGELOG.md  CONTROL_TOWER_MASTERMIND_PLAN_2026.md  CURRENT_STATE.md  CURRENT_STATE_ASSESSMENT.md  DEPENDENCY_MANAGEMENT.md  DESIGN_SYSTEM_AUDIT.md  DEV_DEPLOYMENT_STATUS.md  DEV_STATUS_REPORT.md  Dockerfile  GITHUB_PAGES_STATUS.md  HANDOFF.md  INFRASTRUCTURE_END_TO_END.md  INFRASTRUCTURE_INVENTORY.md  Makefile  NEXT_STEPS_ACTION_PLAN.md  PHASE4_OBSERVABILITY_COMPLETE.md  README.md  REQUIREMENTS.md  RUNBOOK.md  SECURITY_IMPLEMENTATION.md  SESSION_HANDOFF.md  STAGING_DEPLOYMENT.md  STATUS.md  STATUS_REPORT.md  STRATEGIC_AUDIT_AND_NEXT_STEPS.md  TEST_PLAYBOOK.md  TRACEABILITY_MATRIX.md  WIGGUM_ROADMAP.md  core_stack.yaml  docker-compose.prod.yml  (+8 more)
.beads/: issues.jsonl
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: accessibility.yml  backup.yml  bacpac-export.yml  bicep-drift-detection.yml  blue-green-deploy.yml  ci.yml  dependency-update.yml  deploy-oidc.yml  deploy-production.yml  deploy-staging.yml  gh-pages-tests.yml  pages.yml  security-scan.yml  topology-diagram.yml  topology-export.yml  weekly-ops.yml
.roadmap_backups/: WIGGUM_ROADMAP_20260305_130240.md  WIGGUM_ROADMAP_20260305_131036.md  WIGGUM_ROADMAP_20260305_132407.md  WIGGUM_ROADMAP_20260305_133024.md  WIGGUM_ROADMAP_20260305_134329.md  WIGGUM_ROADMAP_20260305_135307.md  WIGGUM_ROADMAP_20260305_140823.md
alembic/: env.py
alembic/versions/: 000_initial_schema.py  001_add_backfill_job_table.py  002_extend_brand_config.py  003_add_resource_lifecycle.py  004_add_audit_log.py  005_add_custom_compliance_rules.py  006_add_billing_account_id.py  008_add_performance_indexes.py  009_widen_policy_name.py  010_varchar_to_nvarchar.py
app/: __init__.py  main.py  main_docs.py  main_errors.py  main_factory.py  main_health.py  main_middleware.py  main_routers.py
app/alerts/: __init__.py  deadline_alerts.py  mfa_alerts.py
app/core/: __init__.py  app_insights.py  auth.py  authorization.py  azure_service_health.py  cache.py  circuit_breaker.py  color_utils.py  config.py  css_generator.py  database.py  design_tokens.py  gpc_middleware.py  http_client.py  keyvault.py  logging_config.py  monitoring.py  notifications.py  oidc_credential.py  privacy_config.py  rate_limit.py  resilience.py  retry.py  riverside_scheduler.py  riverside_scheduler_checks.py  riverside_scheduler_deadlines.py  riverside_scheduler_mfa_alerts.py  riverside_scheduler_models.py  scheduler.py  security_headers.py  templates.py  tenant_context.py  tenants_config.py  theme_middleware.py  token_blacklist.py  tracing.py  uami_credential.py  validation.py
app/integrations/: sui_generis.py
app/models/: __init__.py  audit_log.py  backfill_job.py  brand_config.py  budget.py  compliance.py  cost.py  custom_rule.py  dmarc.py  monitoring.py  notifications.py  recommendation.py  resource_lifecycle.py  riverside.py  sync.py  tenant.py
app/preflight/: __init__.py  admin_risk_checks.py  azure_checks.py  base.py  checks.py  mfa_checks.py  models.py  reports.py  riverside_checks.py  runner.py  tenant_checks.py
app/schemas/: access_review.py  budget.py  chargeback.py  compliance.py  cost.py  identity.py  license.py  reservation.py  resource.py  sync.py  tenant.py
app/services/: backfill_service.py  email_service.py  lighthouse_access.py  lighthouse_client.py  lighthouse_client.py.backup  lighthouse_cost.py  lighthouse_delegation.py  lighthouse_resources.py  lighthouse_security.py  lighthouse_support.py  parallel_processor.py  retention_service.py  riverside_sync.py  teams_webhook.py  theme_service.py
app/templates/: base.html  login.html
arbiter/: README.md
arbiter/policies/: verify.yaml
config/: tenants.yaml.example
docs/: .deploy-trigger  .gitignore  ADR-001-architecture-review-competitive-analysis.md  COST_MODEL_AND_SCALING.md  DATA_RETENTION_POLICY.md  DEPLOYMENT.md  DEVELOPMENT.md  DEV_DEPLOYMENT_STATUS.md  DEV_RECOVERY_RUNBOOK.md  FINAL_PRODUCTION_MIGRATION_STATUS.md  GITHUB_CLI_GUIDE.md  GITHUB_SEAT_AUDIT.md  Gemfile  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_READINESS_AND_ROADMAP.md  MASTER_IMPROVEMENT_ROADMAP.md  OIDC_TENANT_AUTH.md  OPERATIONAL_RUNBOOK.md  PHASE2_IMPROVEMENTS_COMPLETE.md  PHASE2_VALIDATION_RESULTS.md  PHASE3_HANDOFF.md  PHASE3_INFRASTRUCTURE_COMPLETE.md  PHASE3_VALIDATION_RESULTS.md  PRE_STAGING_QA.md  PROJECT_CLOSURE.md  PROJECT_COMPLETION_CERTIFICATE.md  PROJECT_RETROSPECTIVE.md  RIVERSIDE_EXECUTIVE_SUMMARY.md  RIVERSIDE_PREFLIGHT_CHECKS.md  SLO.md  STAGING_DEPLOYMENT_CHECKLIST.md  TYPE_HINT_STANDARDS.md  _config.yml  index.html  index.md  riverside-guide.md  status.md
docs/api/: index.html  (+1 more)
infrastructure/: DRIFT_RECONCILIATION.md  README.md  deploy-governance-infrastructure.bicep  deploy-output.json  deploy.sh  github-oidc.bicep  main.bicep  main.json  parameters.dev.json  parameters.json  parameters.production.json  parameters.staging.json
scripts/: README.md  analyze-azure-costs.py  analyze_azure_sql_queries.py  audit-and-provision-sps.sh  audit_trail.py  backfill_compliance.py  backfill_costs.py  backfill_identity.py  backfill_resources.py  backup_database.py  benchmark_indexes.py  build-detail-pages.js  capture_visual_baselines.py  check-dependencies.sh  check-github-secrets.sh  check-logs.sh  cleanup-old-acr.sh  cleanup-phase-a-apps.sh  cleanup_backups.py  cleanup_old_data.py  configure-azure-redis.py  configure-azure-sql-tuning.py  configure-oidc-federation.sh  daily-ops-check.sh  entrypoint.sh  evaluate-elastic-pools.py  evaluate-sql-free-tier.py  fix-dev-runtime.sh  health-dashboard.sh  hooks.sh  init_riverside_db.py  investigate_sync_tenant_auth.py  manual_sync.py  migrate-dev-to-ghcr.sh  migrate-secrets-to-keyvault.sh  migrate-to-phase-b.sh  migrate_brand_colors.py  monitor-dev.sh  reconcile_tenants.py  render_status.py  (+28 more)
tests/: conftest.py  test_api_completeness.py  test_riverside_api.py
(+646 files in other folders)
